# TREE-datadump-injestor

./: .gitignore  Cargo.toml  config.json  config_dahcc.json  config_location-LDES.json  readme.md
src/: cli.rs  config.rs  domain.rs  fragment.rs  main.rs  member.rs  parse_datadump.rs  read_datadump.rs  tree.rs
src/fragmentation/: fragment.rs  linked_list_fragmentation.rs  mod.rs  one_ary_tree_fragmentation.rs  report.rs  tree.rs
