[package]
name = "data-dump-to-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
rand = "0.8.5"
regex = "1.7.3"
rio_api = "0.8.4"
rio_turtle = "0.8.3"
serde = {version="1.0.164", features=["serde_derive"]}
serde_json = "1.0.99"
