[package]
name = "data-dump-to-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-fs = "1.6.0"
async-trait = "0.1.68"
chrono = {version="0.4.26", features=["serde"]}
derive-getters = "0.3.0"
derive-new = "0.5.9"
futures = "0.3.28"
futures-lite = "1.13.0"
humantime = "2.1.0"
regex = "1.7.3"
rio_api = "0.8.4"
rio_turtle = "0.8.3"
serde = {version="1.0.164", features=["serde_derive"]}
serde_json = "1.0.99"
tokio = {version="1.29.1", features = ["rt-multi-thread", "macros"]}
uuid = {version="1.4.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
